Fix button alignment test

--- a/theme_overrides/assets/stylesheets/homepage-styles.css
+++ b/theme_overrides/assets/stylesheets/homepage-styles.css
@@ -155,7 +155,7 @@
 .content-section {
 
    float: left;
-   width:50%;
+   width:80%;
    color: white;
    min-width:520px;
    
